--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,18 @@ include_directories("include")
 add_library(image_inverter "src/ImageInverter.cpp")
 target_link_libraries(image_inverter ${OpenCV_LIBS})
 
+# Single Thread lib
+add_library(single_thread "src/SingleThreadInverter.cpp")
+target_link_libraries(single_thread ${OpenCV_LIBS})
+
 # main
 add_executable(main "src/main.cpp")
 
 # linking main and ThreadPool lib
 target_link_libraries(main PRIVATE image_inverter ${OpenCV_LIBS})
+
+# flag to enable/disable benchmark compilation
+option(BUILD_BENCHMARK "Build benchmark files" ON)
+if (BUILD_BENCHMARK) 
+  add_subdirectory(benchmarking)
+endif()
